@@ -1,3 +1,8 @@
+2019-01-08  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/88047
+	* gfortran.dg/class_69.f90: New test case.
+
 2019-01-08  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/88717
